--- a/index.html
+++ b/index.html
@@ -20,14 +20,11 @@
 <body>
 <!--Header-->
 <header class="header">
-    <nav class="navbar navbar-expand-lg  navbar-default">
+    <nav class="navbar navbar-expand-lg fixed-top  navbar-default">
         <div class="container-fluid">
 <img src="images/logo-small.png" class="small-logo" alt="logo">          
-<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<button class="navbar-toggler bg-primary mr-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
           </button>
           <div class=" collapse navbar-collapse  navright" id="navbarSupportedContent">
             <ul class="nav navbar-nav navitem-wrapper ">
@@ -54,7 +51,7 @@
         </div>
       </nav>
     <div class="header-overlay">
-        <div class="container">
+        <div class="container container-height">
             <div class="row">
                 <div class="col-md-12">
                     <div class="logo text-center">
@@ -331,8 +328,31 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div id="carouselscreen" class="carousel carousel-dark slide"  data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselscreen" data-bs-slide-to="0" class="active"></button>
+                        <button type="button" data-bs-target="#carouselscreen" data-bs-slide-to="1"></button>
+                        <button type="button" data-bs-target="#carouselscreen" data-bs-slide-to="2"></button>
+                    </div>
+                      <div class="carousel-inner">
+                        <div class="carousel-item active text-center">
+                            <img src="images/screen-01.png" id="screen-image" width="350px" height="500px" alt="screen image 1">
+                        </div>
+                        <div class="carousel-item text-center">
+                            <img src="images/screen-02.png"  id="screen-image"  width="350px" height="500px" alt="screen image 1">
+                           
+                        </div>
+                        <div class="carousel-item text-center">
+                            <img src="images/screen-03.png"  id="screen-image" width="350px" height="500px" alt="screen image 1">                           
+                        </div>
+                      </div>
+                </div>
+            </div>
+        </div>
     </div>
-<div class="screens-slider">
+<!-- <div class="screens-slider">
 <div class="carousel">
     <div class="item">
         <img src="images/screen-01.png" width="60" height="60" alt="screen image 1">
@@ -347,7 +367,7 @@
         <img src="images/screen-04.png" width="60" height="60" alt="screen image 1">
     </div>
 </div>
-</div>
+</div> -->
 </section>
 <!--screen section end-->
 <!--counter section start-->
@@ -521,10 +541,10 @@
 </footer>
 <!--Footer section end-->
 <!-- Bootstrap JQuerry -->
-     <!-- <script src="js/jquery-3.7.1.js"></script>-->
+     <script src="js/jquery-3.7.1.js"></script>
+     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
     <script src="js/bootstrap.bundle.min.js"></script>  
     <script src="js/custom.js"></script>
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script> -->
 <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet"/> -->
 </body>
